2018-07-04  6.9.10-5 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-5, GIT revision 13643:fe71cc8b2:20180704.

2018-07-04  6.9.10-5 Cristy  <quetzlzacatenango@image...>
  * Fixed a few potential memory leaks (reference
    https://github.com/ImageMagick/ImageMagick/issues).

2018-07-02  6.9.10-4 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-4, GIT revision 13635:c1c026715:20180702.

2018-06-28  6.9.10-4 Cristy  <quetzlzacatenango@image...>
  * Small tweaks to compile under Cygwin.
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).
  * Support %B property, the image file size without any decorations.

2018-06-24  6.9.10-3 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-3, GIT revision 13618:69366aab3:20180624.

2018-06-18  6.9.10-2 Cristy  <quetzlzacatenango@image...>
  * More rovust SVG text handling.

2018-06-16  6.9.10-1 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-1, GIT revision 13595:dafb03062:20180616.

2018-06-16  6.9.10-1 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).
  * Fixed an issue with stroke and label: (reference

2018-06-12  6.9.10-0 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.10-0, GIT revision 13585:82d7dbe0b:20180612.

2018-06-11  6.9.10-0 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).

2018-06-11  6.9.9-51 Cristy  <quetzlzacatenango@image...>
  * Release ImageMagick version 6.9.9-51, GIT revision 13574:a58324488:20180611.

2018-06-06  6.9.9-51 Cristy  <quetzlzacatenango@image...>
  * Fixed numerous use of uninitialized values, integer overflow, memory
    exceeded, and timeouts (credit to OSS Fuzz).
