@@ -2550,7 +2550,6 @@ MagickExport MagickBooleanType DrawImage(Image *image,const DrawInfo *draw_info)
             affine.ty=StringToDouble(token,&next_token);
             if (token == next_token)
               ThrowPointExpectedException(image,token);
-            cursor=0.0;
             break;
           }
         if (LocaleCompare("arc",keyword) == 0)
@@ -3595,7 +3594,6 @@ MagickExport MagickBooleanType DrawImage(Image *image,const DrawInfo *draw_info)
         if (LocaleCompare("text",keyword) == 0)
           {
             primitive_type=TextPrimitive;
-            /* affine.tx+=cursor; */
             break;
           }
         if (LocaleCompare("text-align",keyword) == 0)
@@ -3654,7 +3652,6 @@ MagickExport MagickBooleanType DrawImage(Image *image,const DrawInfo *draw_info)
             affine.ty=StringToDouble(token,&next_token);
             if (token == next_token)
               ThrowPointExpectedException(image,token);
-            cursor=0.0;
             break;
           }
         status=MagickFalse;
@@ -4113,6 +4110,9 @@ MagickExport MagickBooleanType DrawImage(Image *image,const DrawInfo *draw_info)
       }
       case TextPrimitive:
       {
+        char
+          geometry[MagickPathExtent];
+
         DrawInfo
           *clone_info;
 
@@ -4131,8 +4131,9 @@ MagickExport MagickBooleanType DrawImage(Image *image,const DrawInfo *draw_info)
           Compute text cursor offset.
         */
         clone_info=CloneDrawInfo((ImageInfo *) NULL,graphic_context[n]);
-        if (clone_info->density != (char *) NULL)
-          clone_info->density=DestroyString(clone_info->density);
+        primitive_info->point.x+=cursor;
+        (void) FormatLocaleString(geometry,MagickPathExtent,"%+f%+f",
+          primitive_info->point.x,primitive_info->point.y);
         clone_info->render=MagickFalse;
         clone_info->text=AcquireString(token);
         (void) ConcatenateString(&clone_info->text," ");
